installer/deploy/nginx-unit-demo/nginx-unit-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: nginx-unit-demo
  name: nginx-unit-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-unit-demo
  strategy: {}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-unit-demo
    spec:
      containers:
        - image: "ghcr.io/bdegeeter/nginx-unit-go-demo:v0.1.1"
          name: nginx-unit-demo
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: nginx-unit-demo
  name: nginx-unit-demo
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: nginx-unit-demo
