installer/deploy/nginx-unit-demo/nginx-unit-demo-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-unit-demo
spec:
  ingressClassName: nginx
  rules:
    - host: nginx-unit-demo.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-unit-demo
                port:
                  number: 8080
